--- a/.github/workflows/testning.yml
+++ b/.github/workflows/testning.yml
@@ -11,7 +11,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Super-Linter
-        uses: github/super-linter@v4
+        uses: github/super-linter/slim@v4
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+github/super-linter/slim@v4
