--- a/.github/workflows/test-scss.yml
+++ b/.github/workflows/test-scss.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Check SCSS
         run: |
+          npm install
           npm install --save-dev stylelint stylelint-config-standard-scss
           npx stylelint "**/*.scss"
     
