--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -17,6 +17,9 @@ jobs:
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
+    - uses: actions/setup-node@v3
+      with:
+        node-version: latest
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
