--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -19,7 +19,8 @@ jobs:
         fetch-depth: 0
     - uses: actions/setup-node@v3
       with:
-        node-version: latest
+        node-version: lts/*
+        check-latest: true
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
